# warden-core

./: Cargo.toml  build.rs
.github/: renovate.json
.github/workflows/: check.yaml  test.yaml
proto/: README.md  payload.proto
proto/configuration/: reload_event.proto  routing.proto  rule.proto  typology.proto
proto/configuration/typology/: mathjson.proto
proto/google/: struct.proto
proto/iso20022/: pacs.002.001.12.proto  pacs.008.001.12.proto  payload.proto
proto/pseudonyms/: account.proto  account_holder.proto  entity.proto  transaction_relationship.proto
src/: configuration.rs  google.rs  iso20022.rs  lib.rs  payload.rs  pseudonyms.rs
src/google/: helpers.rs  protobuf.rs  type.rs
src/google/helpers/: impls.rs  rule_help.rs  time_util.rs
src/google/protobuf/: impls.rs
