[package]
name = "warden-core"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13.5"
serde = { version = "1.0.219", optional = true }
time = { version = "0.3.41", optional = true }
tonic = "0.13.0"
tonic-types = "0.13.0"
utoipa = { version = "5.3.1", optional = true }

[features]
default = []
configuration = []
iso20022 = []
pseudonyms = []
rpc-client-pseudonyms = ["pseudonyms"]
rpc-server-pseudonyms = ["pseudonyms"]
rpc-client-configuration = ["configuration"]
rpc-server-configuration = ["configuration"]
serde = ["dep:serde", "serde/derive"]
time = ["dep:time"]
serde-time = ["time", "time/serde", "serde"]
openapi = ["dep:utoipa", "serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
tonic-build = { version = "0.13.0", features = ["cleanup-markdown"] }
