[package]
name = "warden-core"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
prost = "0.14.0"
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }
time = { version = "0.3.41", optional = true }
tonic = "0.13.0"
tonic-types = "0.13.0"
utoipa = { version = "5.3.1", optional = true }

[features]
default = []
configuration = []
iso20022 = []
pseudonyms = []
payload = ["iso20022", "configuration"]
rpc-client-pseudonyms = ["pseudonyms"]
rpc-server-pseudonyms = ["pseudonyms"]
rpc-client-configuration = ["configuration"]
rpc-server-configuration = ["configuration"]
serde = ["dep:serde", "serde/derive", "serde_json"]
time = [
    "dep:time",
    "serde",
    "time/serde",
    "time/parsing",
    "time/formatting",
    "time/macros",
]
openapi = ["dep:utoipa", "serde", "time"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
tonic-build = { version = "0.13.0", features = ["cleanup-markdown"] }
